<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GithubUsers.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
                
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_image"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:cardCornerRadius="100dp"
                    app:layout_collapseMode="pin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/profil_image"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:contentDescription="@string/profile_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/no_profil_pic"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:text="username"
                    android:textStyle="italic"
                    app:layout_collapseMode="pin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_image"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="20sp"
                    android:text="nama"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    app:layout_collapseMode="pin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:text="Bio"
                    app:layout_collapseMode="pin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nama"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/total_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:text="20 Follower"
                    app:layout_collapseMode="pin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bio"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/total_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    android:text="20 Following"
                    app:layout_collapseMode="pin"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bio"
                    tools:ignore="HardcodedText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/action_settings"
            app:layout_scrollFlags="scroll|enterAlways"
            app:tabTextColor="?android:attr/textColorPrimary"
            app:tabIndicator="?android:attr/textColorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:importantForAccessibility="no"
        android:contentDescription="@string/action_store_favorit_user"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/custom_20_margin"
        android:layout_marginBottom="@dimen/custom_20_margin"
        android:src="@drawable/baseline_favorite_border_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>